Fix visible bottom border on top blog card

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -53,7 +53,7 @@ blockquote {
     background: var(--theme);
   }
   p{
-    padding-left: 0.5rem 0 !important;
+    padding-left: 0.5rem !important;
     font-size: 1.1rem !important;
     width: 100%;
     font-weight: 300;
